src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_7.snap
---
source: src/parser/test.rs
description: let a = 1 2;
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected ';' not found."), (0,10)->(0,11)),
]

===================================

let a = 1 2;
          ^ [Error] SyntaxError: Expected ';' not found.
